--- a/templates/contact.html
+++ b/templates/contact.html
@@ -99,10 +99,10 @@
                       <!-- <a href="http://www.facebook.com" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a> -->
-                      <a href="http://www.twitter.com" title="" class="fa-icon" target="blank">
+                      <a href="https://twitter.com/SouvikC81827319/" title="" class="fa-icon" target="blank">
                         <i class="fa fa-twitter"></i>
                       </a>
-                      <a href="http://www.instagram.com" title="" class="fa-icon" target="blank">
+                      <a href="https://www.instagram.com/wannacry_xvii/" title="" class="fa-icon" target="blank">
                         <i class="fa fa-instagram"></i>
                       </a>
 
